// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`.toEqualIgnoringWhitespace should fail if strings are not equal, ignoring white-space 1`] = `
"<dim>expect(</intensity><red>received</color><dim>).toEqualIgnoringWhitespace(</intensity><green>expected</color><dim>)</intensity>

Expected values to be equal while ignoring white-space (using ===):
Expected:
  
        <green>WHERE</color> <green>CONDITION</color> <green>=</color> <green>"5"</color> 
        <inverse><green>SELECT</color></inverse> <inverse><green>*</color></inverse> <inverse><green>from</color></inverse> <inverse><green>TABLE</color></inverse>
      

Received:
  
    <inverse><red>SELECT</color></inverse> <inverse><red>*</color></inverse> <inverse><red>from</color></inverse> <inverse><red>TABLE</color></inverse> <red>WHERE</color> <red>CONDITION</color> <red>=</color> <red>"5"</color>"
`;

exports[`.toEqualIgnoringWhitespace should not pass if strings are not equal, ignoring white-space 1`] = `
"<dim>expect(</intensity><red>received</color><dim>).not.toEqualIgnoringWhitespace(</intensity><green>expected</color><dim>)</intensity>

Expected values to not be equal while ignoring white-space (using ===):
Expected: not  <green></color>
<green>            .class { </color>
<green>                cssRule: value; </color>
<green>            }</color>
<green>        </color>

"
`;

exports[`.toEqualIgnoringWhitespace should pass if strings are equal ignoring white-space 1`] = `
"<dim>expect(</intensity><red>received</color><dim>).toEqualIgnoringWhitespace(</intensity><green>expected</color><dim>)</intensity>

Expected values to be equal while ignoring white-space (using ===):
Expected:
  <inverse><green>#id</color></inverse> <green>{</color> <green>cssRule:</color> <green>value;</color> <green>}</color>

Received:
  <inverse><red>.class</color></inverse> <red>{</color> <red>cssRule:</color> <red>value;</color> <red>}</color>"
`;
